# arch_ticket_hunter

./: .env  .env.template  .gitignore  .gitmodules  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
arch_ticket_hunter.git/: config  packed-refs
arch_ticket_hunter.git.bfg-report/2025-05-01/21-27-32/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
arch_ticket_hunter.git/info/: refs
arch_ticket_hunter.git/objects/info/: commit-graph  packs
arch_ticket_hunter.git/objects/pack/: pack-b5a2650c478a9e8c4c14083fd7705a8579becaab.bitmap  pack-b5a2650c478a9e8c4c14083fd7705a8579becaab.idx  pack-b5a2650c478a9e8c4c14083fd7705a8579becaab.pack
