[project]
name = "arch-ticket-hunter"
version = "0.1.0"
description = "Ticket hunter for Archstoyanie Festival with Telegram controls"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-telegram-bot>=20.7",
    "schedule>=1.2.1",
]
